syntax = "proto3";

option go_package = "/pb";
package pb;

import "google/protobuf/wrappers.proto";

service CardService {
  rpc GetYGOCard (YGOCardRequest) returns (YGOCardResponse);
}

message YGOCardRequest {
  string cardID = 1;
}

message YGOCardResponse {
  string cardID = 1;
  string cardColor = 2;
  string cardName = 3;
  string cardAttribute = 4;
  string cardEffect = 5;
  google.protobuf.StringValue monsterType = 6;
  google.protobuf.UInt32Value monsterAttack = 7;
  google.protobuf.UInt32Value MonsterDefense = 8;
}
